--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "engines": {
     "node": "~4.4.2",
-    "npm": "~2.15.0"
+    "npm": "~2.15.0",
+    "bower": "~1.7.9"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
