--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "engines": {
     "node": "~4.4.2",
-    "npm": "~2.15.0",
-    "bower": "~1.7.9"
+    "npm": "~2.15.0"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -18,7 +17,8 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "bower": "~1.7.9"
   },
   "repository": {
     "type": "git",
