--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bower": "~1.7.9",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.5.7",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "bower": "~1.7.9"
+    "serve-favicon": "~2.3.0"
   },
   "repository": {
     "type": "git",
