--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootswatch-dist": "amelia",
-    "angular": "1.2.30"
+    "angular": "1.2.30",
+    "angular-route": "1.2.30"
   }
 }
